auto* build system redone
svn path=/trunk/cocoa-sharp/; revision=32169

--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #
 #  Copyright (c) 2004 Quark Inc. and Collier Technologies.  All rights reserved.
 #
-#	$Header: /home/miguel/third-conversion/public/cocoa-sharp/configure.in,v 1.10 2004/07/28 17:10:58 gnorton Exp $
+#	$Header: /home/miguel/third-conversion/public/cocoa-sharp/configure.in,v 1.11 2004/08/10 19:04:21 gnorton Exp $
 #
 
 AC_INIT(README)
@@ -69,6 +69,12 @@ else
     AC_MSG_ERROR([You need to install mono])
 fi
 
+GACUTIL_FLAGS='/package $(PACKAGE) /gacdir $(libdir)'
+AC_PATH_PROG(GACUTIL, gacutil, no)
+if test "x$GACUTIL" = "xno" ; then
+        AC_MSG_ERROR([No gacutil tool found])
+fi
+
 OBJC="gcc"
 CS="C#"
 if test "x$CSC" = "xno" ; then
@@ -85,11 +91,15 @@ GLIB2_PREFIX=`pkg-config --variable=prefix glib-2.0`
 AC_SUBST(GLIB2_PREFIX)
 AC_SUBST(GLIB2_CFLAGS)
 
+API_VERSION=0.0.0.1
+AC_SUBST(API_VERSION)
+
 AC_OUTPUT([
 cocoa-sharp.pc
 Makefile
-monodoc/Makefile
-test/Makefile
+generator/Makefile
+#monodoc/Makefile
+#test/Makefile
 src/Makefile
 src/CocoaSharp.Glue/Makefile
 src/CocoaSharp.Loader/Makefile
@@ -99,11 +109,17 @@ src/WebKit.Glue/Makefile
 src/Apple.Foundation/Makefile
 src/Apple.AppKit/Makefile
 src/Apple.WebKit/Makefile
+src/Apple.Foundation/AssemblyInfo.cs
+src/Apple.AppKit/AssemblyInfo.cs
+src/Apple.WebKit/AssemblyInfo.cs
 ])
 
 #***************************************************************************
 #
 # $Log: configure.in,v $
+# Revision 1.11  2004/08/10 19:04:21  gnorton
+# auto* build system redone
+#
 # Revision 1.10  2004/07/28 17:10:58  gnorton
 # Add cocoa-sharp.pc to make things easier for pkg-config folks (mcs -pkg:cocoa-sharp) works now.
 #
