More auto* cleanup; distcheck should be close to working now
svn path=/trunk/cocoa-sharp/; revision=32179

--- a/generator/Makefile.am
+++ b/generator/Makefile.am
@@ -2,8 +2,7 @@ ASSEMBLY_NAME=generator
 ASSEMBLY=$(ASSEMBLY_NAME).exe
 CLEANFILES=$(ASSEMBLY) 
 DISTCLEANFILES=
-noinst_DATA=generator-run.stamp
-EXTRA_DIST= \ 
+EXTRA_DIST= \
 	Category.cs \
 	CEnum.cs \
 	Element.cs \
@@ -12,7 +11,8 @@ EXTRA_DIST= \
 	Method.cs \
 	ObjCClassInspector.cs \
 	Protocol.cs \
-	Struct.cs 
+	Struct.cs \
+	generator-run.stamp
 
 sources = \
 	Category.cs \
@@ -26,7 +26,7 @@ sources = \
 	Struct.cs 
 
 generator-run.stamp: $(ASSEMBLY)
-	(cd .. ; mono --debug generator/generator.exe -xml:generator/generator.xml) && touch generator-run.stamp
+	(cd .. ; mono --debug generator/generator.exe -xml:generator/generator.xml) && touch $(srcdir)/generator-run.stamp
 
 $(ASSEMBLY): $(sources) 
 	$(CSC) /out:$(ASSEMBLY) $(sources)
