--- a/src/Apple.WebKit/Makefile.am
+++ b/src/Apple.WebKit/Makefile.am
@@ -10,7 +10,6 @@ EXTRA_DIST= \
 references = /r:../Apple.Foundation/Apple.Foundation.dll /r:../Apple.AppKit/Apple.AppKit.dll
 
 sources= \
-	AssemblyInfo.cs \
 	IWebDocumentRepresentation.cs \
 	IWebDocumentSearching.cs \
 	IWebDocumentText.cs \
@@ -29,8 +28,10 @@ sources= \
 	WebPreferences.cs \
 	WebView.cs
 
-$(ASSEMBLY): $(sources) cocoa-sharp.snk
-	$(CSC) /nowarn:0114,0108 /out:$(ASSEMBLY) /target:library $(references) $(sources)
+build_sources = $(addprefix $(srcdir)/, $(sources)) AssemblyInfo.cs
+
+$(ASSEMBLY): $(build_sources) cocoa-sharp.snk
+	$(CSC) /nowarn:0114,0108 /out:$(ASSEMBLY) /target:library $(references) $(build_sources)
 
 cocoa-sharp.snk: $(top_srcdir)/cocoa-sharp.snk
 	cp $(top_srcdir)/cocoa-sharp.snk .
