--- a/src/CocoaSharp.Loader/Makefile.am
+++ b/src/CocoaSharp.Loader/Makefile.am
@@ -1,16 +1,19 @@
 INCLUDES= \
 	@MONO_CFLAGS@
 
+EXTRA_DIST= \
+	Bundle.m \
+	Loader.c
 bin_PROGRAMS=CocoaSharpLoader
 CocoaSharpLoader_SOURCES = \
 	Bundle.m \
 	Loader.c
 
-Bundle.o: Bundle.m
-	gcc -x objective-c -c Bundle.m
+Bundle.o: $(addprefix $(srcdir)/, Bundle.m)
+	gcc -x objective-c -c $(addprefix $(srcdir)/, Bundle.m)
 
-Loader.o: Loader.c
-	gcc -c Loader.c @MONO_CFLAGS@
+Loader.o: $(addprefix $(srcdir)/, Loader.c)
+	gcc -c $(addprefix $(srcdir)/, Loader.c) @MONO_CFLAGS@
 
-CocoaSharpLoader$(EXEEXT):
+CocoaSharpLoader$(EXEEXT): Bundle.o Loader.o
 	gcc Bundle.o Loader.o -o CocoaSharpLoader -framework Cocoa @MONO_LIBS@
