--- a/configure.in
+++ b/configure.in
@@ -9,13 +9,13 @@
 #
 #  Copyright (c) 2004 Quark Inc. and Collier Technologies.  All rights reserved.
 #
-#	$Header: /home/miguel/third-conversion/public/cocoa-sharp/configure.in,v 1.12 2004/08/10 19:15:18 gnorton Exp $
+#	$Header: /home/miguel/third-conversion/public/cocoa-sharp/configure.in,v 1.13 2004/08/11 15:34:15 gnorton Exp $
 #
 
 AC_INIT(README)
 AC_CANONICAL_SYSTEM
 AC_PROG_LIBTOOL
-AM_INIT_AUTOMAKE(cocoa-sharp, 0.1)
+AM_INIT_AUTOMAKE(cocoa-sharp, 0.1.1)
 AM_MAINTAINER_MODE
 dnl Make Objective-C work with automake 1.7.x
 AM_CONDITIONAL([am__fastdepOBJC], false)
@@ -91,7 +91,7 @@ GLIB2_PREFIX=`pkg-config --variable=prefix glib-2.0`
 AC_SUBST(GLIB2_PREFIX)
 AC_SUBST(GLIB2_CFLAGS)
 
-API_VERSION=0.0.0.1
+API_VERSION=1.0.0.0
 AC_SUBST(API_VERSION)
 
 AC_OUTPUT([
@@ -115,6 +115,9 @@ src/Apple.WebKit/AssemblyInfo.cs
 #***************************************************************************
 #
 # $Log: configure.in,v $
+# Revision 1.13  2004/08/11 15:34:15  gnorton
+# Bump to 0.1.1 and tag for our distcheck release of 0.1
+#
 # Revision 1.12  2004/08/10 19:15:18  gnorton
 # auto* cleanup
 #
