Fix .pc to work with our new gac location
svn path=/trunk/cocoa-sharp/; revision=32278

--- a/cocoa-sharp.pc.in
+++ b/cocoa-sharp.pc.in
@@ -6,4 +6,4 @@ libdir=${exec_prefix}/lib
 Name: Cocoa#
 Description: Cocoa# - Apple Cocoa .NET Binding
 Version: 0.1
-Libs: -r:${libdir}/Apple.Foundation.dll -r:${libdir}/Apple.AppKit.dll -r:${libdir}/Apple.WebKit.dll
+Libs: -r:${libdir}/mono/@PACKAGE@/Apple.Foundation.dll -r:${libdir}/mono/@PACKAGE@/Apple.AppKit.dll -r:${libdir}/mono/@PACKAGE@/Apple.WebKit.dll
