--- a/monodoc/Makefile.am
+++ b/monodoc/Makefile.am
@@ -1,3 +1,4 @@
+prefix=/Library/Frameworks/Mono.framework/Versions/1.1.1
 SUBDIRS=..
 
 all: monodoc
@@ -5,14 +6,13 @@ all: monodoc
 monodoc:
 	rm -Rf monodoc.app
 	mkdir -p monodoc.app/Contents/Resources
-	mcs -debug -out:monodoc.app/Contents/Resources/Monodoc.exe browser.cs Contributions.cs XmlNodeWriter.cs catalog.cs -resource:./monodoc.png,monodoc.png -r:System.Web.Services.dll -r:../build/Apple.Foundation.dll -r:../build/Apple.AppKit.dll -r:../build/Apple.WebKit.dll -r:tmp/monodoc.dll
+	mcs -debug -out:monodoc.app/Contents/Resources/Monodoc.exe browser.cs Contributions.cs XmlNodeWriter.cs catalog.cs -resource:./monodoc.png,monodoc.png -r:System.Web.Services.dll -pkg:cocoa-sharp -r:tmp/monodoc.dll
 	mkdir -p monodoc.app/Contents/MacOS
 	cp ../sample/SimpleWindow/*.icns monodoc.app/Contents/Resources
 	cp monodoc.plist monodoc.app/Contents/Info.plist
 	cp -R monodoc.nib monodoc.app/Contents/Resources
-	cp ../build/*.dll* monodoc.app/Contents/Resources
-	cp ../build/*Glue* monodoc.app/Contents/Resources
-	cp ../build/CocoaSharpLoader monodoc.app/Contents/MacOS/monodoc
+	cp $(prefix)/lib/lib*Glue*.dylib monodoc.app/Contents/Resources
+	cp $(prefix)/bin/CocoaSharpLoader monodoc.app/Contents/MacOS/monodoc
 	cp tmp/monodoc.dll monodoc.app/Contents/Resources
 	cp -r tmp/sources monodoc.app/Contents/Resources/sources
 	cp tmp/monodoc.xml monodoc.app/Contents/Resources
