Added new icon file applemono.icns
Updated source and info.plist files to use the new icon file.

Updated Makefile.am to be current.

svn path=/trunk/cocoa-sharp/; revision=32463

--- a/test/Info.plist
+++ b/test/Info.plist
@@ -5,6 +5,6 @@
 	<key>CFBundleExecutable</key>
 	<string>Loader</string>
         <key>CFBundleIconFile</key>
-        <string>mono.icns</string>
+        <string>applemono.icns</string>
 </dict>
 </plist>
