Add NSPathStore2 to the Foundation tree; This fixes bug #63313
svn path=/trunk/cocoa-sharp/; revision=32692

--- a/src/Apple.Foundation/Makefile.am
+++ b/src/Apple.Foundation/Makefile.am
@@ -126,6 +126,7 @@ EXTRA_DIST= \
 	NSNumberFormatter.cs \
 	NSObject.cs \
 	NSOutputStream.cs \
+	NSPathStore2.cs \
 	NSPipe.cs \
 	NSPoint.cs \
 	NSPort.cs \
@@ -339,6 +340,7 @@ sources= \
 	NSNumberFormatter.cs \
 	NSObject.cs \
 	NSOutputStream.cs \
+	NSPathStore2.cs \
 	NSPipe.cs \
 	NSPoint.cs \
 	NSPort.cs \
