2005-01-02  Geoff Norton  <gnorton@customerdna.com>
	* Makefile.am: Add header-gen/Main.cs to the build.
	  header-gen/HeaderMethod.cs: Fix sending the +/- into the Inspector
	  header-gen/Main.cs: Catch an exception that mono mis-throws in the regexp system until bug is fixed


svn path=/trunk/cocoa-sharp/; revision=38239

--- a/generator/Makefile.am
+++ b/generator/Makefile.am
@@ -23,6 +23,7 @@ sources = \
 	header-gen/HeaderMethod.cs \
 	header-gen/HeaderProtocol.cs \
 	header-gen/HeaderStruct.cs \
+	header-gen/Main.cs \
 	macho-gen/DylibCommand.cs \
 	macho-gen/ICommand.cs \
 	macho-gen/LoadCommand.cs \
